# ProteinView

./: .gitignore  2026-03-12-224603-this-session-is-being-continued-from-a-previous-co.txt  Cargo.toml  README.md
.planning/: desperadus-fork-analysis.md  research-mirroring-fix.md  research-plddt-coloring.md  research-sheet-frame-guides.md  research-ss-inference.md
assets/: header.txt
docs/plans/: 2026-03-04-proteinview-design.md  2026-03-11-small-molecule-support-design.md
docs/superpowers/specs/: 2026-03-13-hd-ssh-performance-design.md
src/: app.rs  event.rs  main.rs
src/model/: interface.rs  mod.rs  protein.rs  secondary.rs
src/parser/: fetch.rs  mod.rs  pdb.rs  xyz.rs
src/render/: bond.rs  braille.rs  camera.rs  cartoon.rs  color.rs  framebuffer.rs  hd.rs  kitty_png.rs  mod.rs  pixel.rs  ribbon.rs
src/ui/: header.rs  help_overlay.rs  helpbar.rs  interface_panel.rs  mod.rs  statusbar.rs  viewport.rs
