[package]
name = "proteinview"
version = "0.1.0"
edition = "2024"
description = "Terminal protein structure viewer"
license = "MIT"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
pdbtbx = { version = "0.12", features = ["rstar"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["blocking"], optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }

[features]
default = []
fetch = ["dep:reqwest", "dep:tokio"]
